--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -3,6 +3,13 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+
+# Define Variables for the Environment
+variables:
+- name: DEV_ENVIRONMENT
+  value: dev
+- name: QA_ENVIRONMENT
+  value: qa
   
 # Stage-1: Terraform Validate Stage
 ## Step-1: Publish Artifacts to Pipeline (Pipeline artifacts provide a way to share files between stages in a pipeline or between different pipelines. )
@@ -43,3 +50,46 @@ stages:
           command: 'validate'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
           allowTelemetryCollection: false
+- stage: Deloy AKS Cluster
+  jobs:
+     - deployment: DeployDevAKSCluster
+       displayName: DeployDevAKSCluster
+       pool:
+         vmImage: 'ubuntu-latest'
+       environment: $(DEV_ENVIRONMENT)
+       strategy:
+        runOnce:
+          deploy:
+            steps:
+              - task: DownloadSecureFile@1
+                inputs:
+                  secureFile: 'aks-terraform-devops-ssh-key-ubub'
+                displayName: :Download SSH Key
+    
+              - task: TerraformCLI@2
+                inputs:
+                  command: 'init'
+                  workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                  backendType: 'azurerm'
+                  backendServiceArm: 'terraform-aks-azurerm-svc-con'
+                  backendAzureRmResourceGroupName: 'terraform-storage-rg'
+                  backendAzureRmStorageAccountName: 'terraformstatexlrwdrzs9'
+                  backendAzureRmContainerName: 'tfstatefiles'
+                  backendAzureRmKey: 'aks-$(DEV_ENVIRONMENT).tfstat'
+                  allowTelemetryCollection: true
+              - task: TerraformCLI@2
+                displayName: :Terraform Plan
+                inputs:
+                  command: 'plan'
+                  workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                  environmentServiceName: 'terraform-aks-azurerm-svc-con'
+                  commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath)  -var environment=$(DEV_ENVIRONMENT) -out $(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
+                  allowTelemetryCollection: false
+              - task: TerraformCLI@2
+                displayName: Terraform Apply
+                inputs:
+                  command: 'apply'
+                  workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                  environmentServiceName: 'terraform-aks-azurerm-svc-con'
+                  commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
+                  allowTelemetryCollection: false
