--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -50,7 +50,7 @@ stages:
           command: 'validate'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
           allowTelemetryCollection: false
-- stage: Deloy AKS Cluster
+- stage: DeployAKSClusters
   jobs:
      - deployment: DeployDevAKSCluster
        displayName: DeployDevAKSCluster
