Update 01-terraform-provision-aks-cluster-pipeline.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline.yml
+++ b/01-terraform-provision-aks-cluster-pipeline.yml
@@ -63,7 +63,7 @@ stages:
             steps:
               - task: DownloadSecureFile@1
                 inputs:
-                  secureFile: 'aks-terraform-devops-ssh-key-ubub'
+                  secureFile: 'aks-terraform-devops-ssh-key-ububtu.pub'
                 displayName: :Download SSH Key
     
               - task: TerraformCLI@2
